kubernetes/talos/proxies/internal/internal/radarr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: radarr
spec:
  ports:
  - protocol: TCP
    port: 7878
    name: http
    targetPort: 7878
