kubernetes/talos/proxies/internal/internal/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
  name: radarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`radarr.vandeneede.org`)
    services:
    - name: radarr
      port: 7878
